src/views/snapshots/hn__views__stories__tests__stories_view_empty_list.snap
---
source: src/views/stories.rs
expression: output
---
[0]Favs  [1]Top  [2]New  [3]Best  [4]Ask  [5]Show  [6]Jobs
────────────────────────────────────────────────────────────────────────────────




















────────────────────────────────────────────────────────────────────────────────
 Top  1/0 | H/L:feeds  f:fav  ?:help  q:quit
