src/views/snapshots/hn__views__stories__tests__stories_view_with_stale_timestamp.snap
---
source: src/views/stories.rs
expression: output
---
[0]Favs  [1]Top  [2]New  [3]Best  [4]Ask  [5]Show  [6]Jobs        loaded 10m ago
────────────────────────────────────────────────────────────────────────────────
▶ Show HN: I built a terminal UI for Hacker News (github.com)
  ▲ 142 | dang | 47 comments | 1d ago
  Why Rust is the Future of Systems Programming (example.com)
  ▲ 89 | pg | 23 comments | 1d ago
  Ask HN: What are you working on? (self)
  ▲ 56 | sama | 128 comments | 1d ago
  The unreasonable effectiveness of simple HTML (blog.example.com)
  ▲ 234 | tptacek | 89 comments | 1d ago
  A Deep Dive into Linux Kernel Networking (lwn.net)
  ▲ 167 | patio11 | 34 comments | 1d ago










────────────────────────────────────────────────────────────────────────────────
 Top  1/5 | H/L:feeds  f:fav  ?:help  q:quit
